--- a/00 Doc/RWorkshop.Rmd
+++ b/00 Doc/RWorkshop.Rmd
@@ -1,20 +1,108 @@
 ---
-title: "DV_SProject"
+title: "DV_TProject1"
 output: html_document
 ---
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+**Authors: Rolando Melendez, Hyunji Seo, Catherine Tu**
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+##This is how our RStudio is configured:
+```{r}
+sessionInfo()
+```
+***
+##Program file structure
+  00 Doc - contains .Rmd and .html 
+  
+  01 Data - contains the code to Extract, Transform, and Load our data 
+  
+  02 Shiny - this is where the server and ui for our Shiny app will be housed
+
+***  
+##Data summary and subset
+```{r}
+#Shows the subset and summary of the data frame
+#source("../01 Data/R_ExtractTransform.R", echo = TRUE)
+```
+```{r}
+source("../01 Data/R_Load.R", echo = TRUE)
+```
+
+####Explanation of Data:
+This data relates to the direct marketing campaign of a Portuguese bank to have people subscribe to a term deposit at their institution. The campaign had gathered data regard their campaign efforts, individuals' demographics, and external social situations at the time of the campaign. 
+
+##Scatter Plot
+
+####R Visualization
 
 ```{r}
-summary(cars)
+#Shows the subset and summary of the data frame
+source("../02 Shiny/ui.R", echo = TRUE)
+source("../02 Shiny/server.R", echo = TRUE)
 ```
 
-You can also embed plots, for example:
+####Tableau Visualization
 
-```{r, echo=FALSE}
-plot(cars)
+![](./ShinyCrossTab.jpg)
+
+####Findings:
+In this visualization we observed Consumer Price Index (CONS.PRICE.IDX), duration of the last marketing call (DURATION), and final outcome of the campiagn (Y).
+
+We found that for those who said yes there seemed to be a longer call duration and higher consumer price index for the period they were contacted. We speculate this is due to the fact that when consumer price index rises so do interest rates, and that would make people less likely to subscribe to a term deposit. Therefore, in order to get a yes, a longer call was required. 
+
+***
+
+##Cross Tab and KPI
+```{r}
+#Shows the subset and summary of the data frame
+#source("../03 R SQL Visualizations/Crosstab_KPI.R", echo = TRUE)
+```
+![](./ShinyCrossTab.jpg)
+
+####Findings:
+For this graph, we compared the average call duration across target market groups sectioned by education level (Education) and whether or not they have a housing loan (Housing). We also further catgorized the market segment groups by a key performance indicator: the ratio of campaign successes to campaign failures in those of the same education level (Calculated Success KPI). Campaign success is defined as when they accepted a term deposit (Y) offer as a result of the campaign. A 'High' rating in the KPI indicated that the ratio of successes to failures exceeded 15%. A 'Low' rating indicated the ratio of successes to failures was less than 10%. This KPI rating also helps showcase which education level group the bank had more success in persuading.
+
+We found that the bank generally found higher success rates when contacting people of higher education levels. It also seems that people of higher education levels also accepted the term deposit offer in a shorter call duration. Meanwhile, the bank had more difficulty persuading the market segments of  elementary and junior high graduates. If the bank were to continue the campaign, we would suggest for them to spend more time and effort persuading those of higher education levels, as each second of a telemarketing call is more valuable in bringing these people to a decision.
+
+***
+
+##Bar Chart and Reference Line
+
+####R Visualization
+
+```{r}
+#Shows the subset and summary of the data frame
+#source("../03 R SQL Visualizations/Barchart_RLine.R", echo = TRUE)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+####Tableau Visualization
+
+![](./ShinyCrossTab.jpg)
+
+####Findings:
+In this visualization we observed the number of times each person was contacted in the current cmpaign (CAMPAIGN), past campaign outcome (POUTCOME), and current campaign outcome (Y)
+
+Overall, we found that banks, on average, spent more effort on people who have not been contacted in previous campaigns. For those who have previously been a customer, banks required less contact times on average compared to the other two groups. This leaves previous non-customers who were contacted, on average, higher than previous customers, but lower than new targets. Lastly, one consistent trend was that across all groups the average effort needed to persuade those who ultimately said yes was less than those who refused. 
+
+***
+
+##Data Blending 
+
+####R Visualization
+
+```{r}
+#Shows the subset and summary of the data frame
+#source("../03 R SQL Visualizations/Blending.R", echo = TRUE)
+```
+
+####Tableau Visualization
+
+![](./ShinyCrossTab.jpg)
+
+####Findings:
+For this visualization, we blended two data sets - job-type and bank-additional - and extracted the relationship between the variables JOB TYPE, CAMPAIGN, and AVERAGE SALARY. We used JOB TYPE as the common variable between the two data sets, and created a relationship in Tableau through JOB TYPE. The CAMPAIGN variable represented the number of contacts performed during the current marketing campaign for a specific client, while the AVERAGE SALARY represented the annual salary of clients, given by job types.
+
+In Tableau, we placed AVERAGE SALARY into columns and JOB TYPE into rows, and illustrated the relationship through a bar graph. Then, we incorporated CAMPAIGN as an aggregated SUM value, marked through color and label. For ease, we sorted the job type by descending salary, rather than alphabetically.
+
+Our findings found an interesting relationship between these three variables. Rather than a simplistic relationship between salary and campaign, we found that the relationship between the two variables was more complicated. While management, services, and entrepreneur had the highest salaries, it did not match the job types with the highest campaign contacts, which were administration, bluecollar, technician, and services. Not only was it unexpected that the relationship between average salary and campaign was not matched exactly, but it was surprising to find these four job types grouped together by CAMPAIGN. Besides management, the other highest salaried job types include entrepreneur, selfemployed, and unknown. Considering this, we speculate that due to the unpredictable and risky nature of the job, marketing may have been less effective in persuading the clients in these three job types to subscribe to a term deposit.
+
+***
