--- a/00 Doc/RWorkshop.Rmd
+++ b/00 Doc/RWorkshop.Rmd
@@ -21,7 +21,7 @@ sessionInfo()
 ##Data summary and subset
 ```{r}
 #Shows the subset and summary of the data frame
-#source("../01 Data/R_ExtractTransform.R", echo = TRUE)
+source("../01 Data/R_ExtractTransform.R", echo = TRUE)
 ```
 ```{r}
 source("../01 Data/R_Load.R", echo = TRUE)
