Complete DV_SProject
Updated Shiny link registration to
https://hyunjiseo.shinyapps.io/DV_SProject

--- a/00 Doc/RWorkshop.Rmd
+++ b/00 Doc/RWorkshop.Rmd
@@ -32,7 +32,7 @@ This data relates to the direct marketing campaign of a Portuguese bank to have 
 
 ####Shiny App:
 
-Our Shiny App can be found here : https://hyunjiseo.shinyapps.io/02Shiny
+Our Shiny App can be found here : https://hyunjiseo.shinyapps.io/DV_SProject
 
 ##Scatter Plot
 
